@@ -2,6 +2,8 @@ Version 1.5.1 - xx xxx 2010
 
   * Add librets-config-win for Windows. Ticket #138.
   * Properly parse failed login RETS Reply. Ticket #139.
+  * User Agent Authentication fails for non-Interealty servers.
+    Ticket #140.
   * Add InKeyIndex() to MetadataTable and expose to SWIG.
     Ticket #157.
 
